--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "0.19.0",
+    "better-scroll": "^1.15.2",
+    "date-fns": "^2.6.0",
     "element-ui": "^2.12.0",
+    "moment": "^2.24.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-axios": "2.1.5",
+    "vue-lazyload": "^1.3.3",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
